simple_grammar.txt
PROGRAM     -> PROGRAM LABEL COMMAND lf | LABEL COMMAND lf | lf | etf
COMMAND     -> input VARIABLE | print VARIABLE | rem | if CONDITIONAL goto LABEL | let VARIABLE = EXPRESSION | goto LABEL | end
EXPRESSION  -> ITEM OPERATOR ITEM | ITEM
OPERATOR    -> + | - | / | *
CONDITIONAL -> ITEM RELATIONAL ITEM
RELATIONAL  -> == | != | > | < | >= | <=
ITEM        -> VARIABLE | INTEGER
INTEGER     -> - LABEL | LABEL
LABEL       -> LABEL DIGIT | DIGIT
DIGIT       -> 0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9
VARIABLE    -> a | b | c | d | e | f | g | h | i | j | k | l | m | n | o | p | q | r | s | t | u | v | w | x | y | z

Analise lexica
0 : 10
1 : n
2 : 20
3 : 0
4 : 90
5 : 25
6 : s
7 : 30
8 : i
9 : 40
10 : 50
11 : 1
12 : 60
13 : 65
14 : m
15 : 70
16 : 80
17 : 99
18 : x
19 : 95
[51, 0, (1, 1)]
[62, , (1, 4)]
[41, 1, (1, 10)]
[10, , (1, 11)]
[51, 2, (2, 1)]
[66, , (2, 4)]
[41, 1, (2, 7)]
[36, , (2, 9)]
[51, 3, (2, 12)]
[65, , (2, 14)]
[51, 4, (2, 19)]
[10, , (2, 21)]
[51, 5, (3, 1)]
[63, , (3, 4)]
[41, 6, (3, 8)]
[11, , (3, 10)]
[51, 3, (3, 12)]
[10, , (3, 13)]
[51, 7, (4, 1)]
[63, , (4, 4)]
[41, 8, (4, 8)]
[11, , (4, 10)]
[41, 1, (4, 12)]
[10, , (4, 13)]
[51, 9, (5, 1)]
[63, , (5, 4)]
[41, 6, (5, 8)]
[11, , (5, 10)]
[41, 6, (5, 12)]
[21, , (5, 14)]
[41, 8, (5, 16)]
[10, , (5, 17)]
[51, 10, (6, 1)]
[63, , (6, 4)]
[41, 8, (6, 8)]
[11, , (6, 10)]
[41, 8, (6, 12)]
[22, , (6, 14)]
[51, 11, (6, 16)]
[10, , (6, 17)]
[51, 12, (7, 1)]
[66, , (7, 4)]
[41, 8, (7, 7)]
[33, , (7, 9)]
[51, 3, (7, 11)]
[65, , (7, 13)]
[51, 9, (7, 18)]
[10, , (7, 20)]
[51, 13, (8, 1)]
[63, , (8, 4)]
[41, 14, (8, 8)]
[11, , (8, 10)]
[41, 6, (8, 12)]
[24, , (8, 13)]
[41, 1, (8, 14)]
[10, , (8, 15)]
[51, 15, (9, 1)]
[64, , (9, 4)]
[41, 14, (9, 10)]
[10, , (9, 11)]
[51, 16, (10, 1)]
[65, , (10, 4)]
[51, 17, (10, 9)]
[10, , (10, 11)]
[51, 4, (11, 1)]
[63, , (11, 4)]
[41, 18, (11, 8)]
[11, , (11, 10)]
[22, , (11, 12)]
[51, 11, (11, 13)]
[10, , (11, 14)]
[51, 19, (12, 1)]
[64, , (12, 4)]
[41, 18, (12, 10)]
[10, , (12, 11)]
[51, 17, (13, 1)]
[67, , (13, 4)]
[3, , (13, 6)]
